--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@ date:		2021/02/04
         <h1>Brian Ke</h1>
         <h2>About me</h2>
         <p>This is my first semester at BCIT and I am <em>very</em> excited to start this new chapter of my life. I have <strong>no prior coding or web development</strong> experience but I am eager to learn as I plan to enter the technology industry after my time in this program. Outside of post-secondary education, I like to consume mamy forms of media (shows, movies, games, etc.).</p>
+        <p>Some courses that I am taking:
+            <ul>
+                <li>COMM 1116</li>
+                <li>ACIT 1420</li>
+                <li>ORGB 1100</li>
+            </ul>
+        </p>
 	</body>
 
 </html>
