--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ date:		2021/02/04
             <ul>
                 <li>COMM 1116</li>
                 <li>ACIT 1420</li>
-                <li>ORGB 1100</li>
+                <li><a href="https://www.bcit.ca/outlines/20211085986/">ACIT 1620</a></li>
             </ul>
         </p>
 	</body>
