--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ date:		2021/02/04
 -->
 	<head>
 		<title>Assignment 2</title>
-		<meta charset="utf-8" />
+        <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	</head>
 	<body>
         <main>
@@ -28,6 +29,7 @@ date:		2021/02/04
                     </p>
                 </section>
             </article>
+        </main>
         <a href="https://www.bcit.ca/">
         <img src="images/bcit_image.png">
         </a>
