Adding <nav> to index.html. Added semantic tags to school.html and courses.html. Moved BCIT logo and link to school.html. Moved course list to courses.html.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ student#:   A01218821
 date:		2021/02/04
 -->
 	<head>
-		<title>Assignment 2</title>
+		<title>ACIT 1620 Assignment</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	</head>
@@ -14,25 +14,19 @@ date:		2021/02/04
         <main>
             <article>
                 <header>
+                    <nav>
+                        <a href="misc/courses.html">Courses</a>
+                        <a href="misc/school.html">School</a>
+                    </nav>
                     <h1>Brian Ke</h1>
                     <img src="images/my_image.jpg" alt="Picture of Brian Ke as a child" width="250" height="250">
                 </header>
                 <section>
                     <h2>About me</h2>
                     <p>This is my first semester at BCIT and I am <em>very</em> excited to start this new chapter of my life. I have <strong>no prior coding or web development</strong> experience but I am eager to learn as I plan to enter the technology industry after my time in this program. Outside of post-secondary education, I like to consume mamy forms of media (shows, movies, games, etc.).</p>
-                    <p>Some courses that I am taking:
-                    <ul>
-                        <li>COMM 1116</li>
-                        <li>ACIT 1420</li>
-                        <li><a href="https://www.bcit.ca/outlines/20211085986/">ACIT 1620</a></li>
-                    </ul>
-                    </p>
                 </section>
             </article>
         </main>
-        <a href="https://www.bcit.ca/">
-        <img src="images/bcit_image.png">
-        </a>
 	</body>
 
 </html>
