Adding Montserrat font to <h1> in index.html. Changing background and h1 text color to be contrasting.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ date:		2021/02/04
 	<head>
 		<title>ACIT 1620 Assignment</title>
         <meta charset="utf-8" />
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	</head>
 	<body>
@@ -18,7 +19,7 @@ date:		2021/02/04
                         <a href="misc/courses.html">Courses</a>
                         <a href="misc/school.html">School</a>
                     </nav>
-                    <h1>Brian Ke</h1>
+                    <h1 class="index_h1">Brian Ke</h1>
                     <img src="images/my_image.jpg" alt="Picture of Brian Ke as a child" width="250" height="250">
                 </header>
                 <section>
