--- a/misc/courses.html
+++ b/misc/courses.html
@@ -8,7 +8,7 @@ date:		2021/02/19
 	<head>
 		<title>Courses</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
 	</head>
 	<body>
         <main>
@@ -16,7 +16,7 @@ date:		2021/02/19
                 <header>
                     <nav>
                         <a href="../index.html">Home</a>
-                        <a href="misc/school.html">School</a>
+                        <a href="school.html">School</a>
                     </nav>
                 </header>
                 <section>
