--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@ date:		2021/02/04
         <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	</head>
 	<body>
+        <header>
+            <nav class="container1">
+                <div class="firstgrid1"><h1 class="index_h1">Welcome to my Website</h1></div>
+                <div class="firstgrid2"><a href="misc/courses.html">Courses</a></div>
+                <div class="firstgrid3"><a href="misc/school.html">School</a></div>
+            </nav>
+        </header>
         <main>
             <article>
-                <header>
-                    <nav>
-                        <a href="misc/courses.html">Courses</a>
-                        <a href="misc/school.html">School</a>
-                    </nav>
-                    <h1 class="index_h1">Brian Ke</h1>
-                    <img src="images/my_image.jpg" alt="Picture of Brian Ke as a child" width="250" height="250">
-                </header>
-                <section>
-                    <h2>About me</h2>
-                    <p>This is my first semester at BCIT and I am <em>very</em> excited to start this new chapter of my life. I have <strong>no prior coding or web development</strong> experience but I am eager to learn as I plan to enter the technology industry after my time in this program. Outside of post-secondary education, I like to consume mamy forms of media (shows, movies, games, etc.).</p>
+                <section class="container2">
+                    <div class="secondgrid1"><h2>About me</h2></div>
+                    <div class="secondgrid2"><p>This is my first semester at BCIT and I am <em>very</em> excited to start this new chapter of my life. I have <strong>no prior coding or web development</strong> experience but I am eager to learn as I plan to enter the technology industry after my time in this program. Outside of post-secondary education, I like to consume mamy forms of media (shows, movies, games, etc.).</p></div>
+                    <div class="secondgrid3"><img src="images/my_image.jpg" alt="Picture of Brian Ke as a child" width="250" height="250"></div>
+                    <div class="secondgrid4"><p>This will be a paragraph that is more about me.</p></div>
                 </section>
             </article>
         </main>
+        <footer>
+            <p>Copyright data</p>
+        </footer>
 	</body>
 
 </html>
